Code and internal documentation clean-up. Changed class from Runtime to ProcessBuilder